# University-work

./: README.md
Fundamentals of programming/Semester 1/Assignment 5/: main.py
Fundamentals of programming/Semester 1/a1/: p2.py
Semester 1/Fundamentals of programming/Assignment 2/: main.py
Semester 1/Fundamentals of programming/a1/: p3.py
Semester 1/Fundamentals of programming/a3/: main.py
Semester 1/Fundamentals of programming/a4/: bkt.py
Semester 2/Data structures and algorithms/Queue/: App.cpp  Queue.cpp  Queue.h  ShortTest.cpp
Semester 2/Data structures and algorithms/SLL MultiMap/: App.cpp  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h
Semester 2/Data structures and algorithms/SLLA MultiMap/: App.cpp  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h
Semester 2/Data structures and algorithms/Stack/: App.cpp  Stack.cpp  Stack.h
Semester 2/Graph algorithms/Assignment 1-2/: graph.py  main.py
Semester 2/Object Oriented Programming/Assignment 1/: main  main.c
Semester 2/Object Oriented Programming/Final Exam/: CMakeLists.txt  agent.cpp  agent.h  agentwindow.cpp  agentwindow.h  controller.cpp  controller.h  location.cpp  location.h  logisticswindow.cpp  logisticswindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mapwidget.cpp  mapwidget.h  parcel.cpp  parcel.h  repository.cpp  repository.h
Semester 2/Object Oriented Programming/Final Exam/data/: agents.txt  parcels.txt
Semester 2/Operating systems/: labTest1.sh
Semester 3/Databases/: hw-1.sql  hw-3.sql
(+166 files in other folders)
